# athena

./: .env.example  1755914308.txt  24.txt  ATHENA_README.md  CALENDAR_SETUP.md  EPIC_GENERATION_README.md  README.md  active_sessions.pkl  athena_config.json  athena_meet_bot.py  cleaned_transcript_ocr-iqkh-ftz_20250823_072154.txt  config.json  credentials.json  database.py  db_cli.py  epic_cli.py  epic_generation_20250823_055735.json  epic_generation_20250823_060645.json  epic_generator.py  example_usage.py  flask_server.py  jira_integration.py  minimal_webhook.py  prompt.txt  pyproject.toml  requirements.txt  sample_output.json  sample_output_transcript.md  sample_output_transcript.txt  sample_prd.md  sample_transcript.md  setup_calendar_auth.py  setup_service_account.py  simple_transcript.txt  sprint_report_generator.py  standup_automation.py  standup_summarizer.py  teams_context.md  test_athena.py  test_epic_generation.py  (+6 more)
standups/: 2025-08-22_23-32-02_standup.json  2025-08-22_23-33-07_standup.json  2025-08-22_23-33-51_standup.json  2025-08-23_03-43-46_standup.json  2025-08-23_07-13-40_standup.json  21.txt  22.txt  23.txt
